# MemoriRay

./: .gitignore  README.md  app.py  bot.py  chat_history.json  gemini_bot.py  llm.py  memory_store.py  pyproject.toml  requirements.txt
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: chat.baml  clients.baml  image_description.baml  select_memory.baml  sentiment.baml  therapist_bot.baml
mindsync-backend/: .env.example  README.md  docker-compose.yml  environment.yml  requirements.txt
mindsync-backend/medatada/database/: object_storage.json
mindsync-backend/src/: main.py
mindsync-backend/src/api/routes/: conversation.py  health.py  memory.py  user.py
mindsync-backend/src/config/: settings.py
mindsync-backend/src/core/: database.py
mindsync-backend/src/models/database/: user.py
mindsync-backend/src/models/schemas/: conversation.py  memory.py
mindsync-backend/src/services/agent/: agent_orchestrator.py  dataset_agent.py  multimodel_embedding_agent.py  tools.py
mindsync-backend/src/services/conversation/: __init__.py  conversation_service.py
mindsync-backend/src/services/database/: __init__.py  object_storage_service.py  relational_database_service.py  vector_databaser_service.py
mindsync-backend/src/services/memory/: embeddings.py  memory_service.py  vector_store.py
mindsync-backend/src/services/safety/: safety_monitor.py
mindsync-backend/test/dataset/: object_storage_test.py
